nodemon + full documentation
